[WFCORE-4000] Configuring java.se module to domain servers (in tests).